# nido

./: Cargo.toml  LICENSE  README.md  install.sh
src/: config.rs  main.rs  manifest.rs  paths.rs  pkg.rs  secrets.rs  symlink.rs
src/commands/: add.rs  apply.rs  init.rs  mod.rs  pkg.rs  secret.rs  status.rs  sync.rs
